# mission_manager

./: CMakeLists.txt  package.xml  setup.py
action/: ArmTrajectoryProcessing.action  BaseTrajectoryProcessing.action
config/: machines.launch  node_info.yaml
launch/: cavity_server.launch  detectors.launch  exploration.launch  robot.launch
msg/: Context.msg
scripts/: replay.py  state_machine.py  test_ssh.py
src/mission_manager/: exploring_manager.py  filling_manager.py  node_manager.py
src/robot_manager/: node_manager.py  node_wrapper.py
srv/: Trigger.srv
