<?xml version="1.0"?>
<package format="2">
  <name>mission_manager</name>
  <version>0.0.0</version>
  <description>Example SMACH task manager with RQT control</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license> <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>smach</depend>
  <depend>smach_ros</depend>
  <depend>smach_msgs</depend> 
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>python_qt_binding</depend> 
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>

</package>